fix(wizard): improve vertical wizard button positioning on small screens
Change footer button container flex-direction to column  to avoid overlapping buttons

--- a/projects/element-ng/wizard/si-wizard.component.scss
+++ b/projects/element-ng/wizard/si-wizard.component.scss
@@ -304,3 +304,29 @@ $wizard-vertical-divider-border-color: variables.$element-ui-4;
   min-inline-size: 24px;
   min-block-size: 24px;
 }
+
+.wizard-footer {
+  container-type: inline-size;
+}
+
+.wizard-footer-inner {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
+  gap: map.get(variables.$spacers, 6);
+
+  > .end {
+    margin-inline-start: auto;
+  }
+}
+@container (max-width: 400px) {
+  .wizard-footer-inner {
+    flex-direction: column;
+    align-items: stretch;
+
+    > .end {
+      margin-inline-start: unset;
+    }
+  }
+}
